Fix bugs for current content

--- a/academic-details.html
+++ b/academic-details.html
@@ -52,7 +52,7 @@
     </a>
 
     <div class="social-links text-center">
-      <em>Sociolinguist</em>
+      <span>楊真宜 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
