--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </a>
 
     <div class="social-links text-center">
-      <em>Sociolinguist</em>
+      <span>楊真宜 (Karen)</span>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -108,14 +108,14 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>楊真宜 (Chen-Yi Yang)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>楊真宜 Chen-Yi Yang</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>04-23924505 #8633</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Taichung, Taiwan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctoral</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a91406587@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></li>
                 </ul>
@@ -250,7 +250,7 @@
 
             <div class="resume-item">
               <h4>國立彰化師範大學 科學教育研究所 博士後研究員</h4>
-              <h5>20XX - 20XX</h5>
+              <h5>2022 - 2022</h5>
               <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
               <ul>
                 <li>(TBD) Managed up to 5 projects or tasks at a given time while under pressure</li>
@@ -467,7 +467,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>貢獻 services</h2>
+        <h2>貢獻 Contributions</h2>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
