Revise format for the content

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Doctor</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Ph. D.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a91406587@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>chen-yi-yang.github.io</span></li>
                 </ul>
@@ -137,7 +137,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>專業經歷 Experience</h2>
+        <h2>經歷 Experience</h2>
         <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -148,7 +148,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>國立清華大學 語言學研究所博士</h4>
+              <h4>國立清華大學語言學研究所博士</h4>
               <h6>Ph.D., Linguistics</h6>
               <p><em>National Tsing Hua University, Hsinchu City, Taiwan.</em></p>
               <p>Dissertation: A Study of Taiwan Junior High Students’ Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
@@ -156,7 +156,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>靜宜大學 英國語文學系碩士</h4>
+              <h4>靜宜大學英國語文學系碩士</h4>
               <h6>MA, English Language, Literature and Linguistics</h6>
               <p><em>Providence University, Taichung City, Taiwan.</em></p>
               <p>(TBD) Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
@@ -165,7 +165,7 @@
             <h3 class="resume-title">Oversea</h3>
 
             <div class="resume-item pb-0">
-              <h4>美國夏威夷大學 語言學系 訪問學人</h4>
+              <h4>美國夏威夷大學語言學系 | 訪問學人</h4>
               <h5>2013 - 2014</h5>
               <p><em>Visiting Scholar, Department of Linguistics, University of Hawaiꞌi at Mānoa.</em></p>
               <ul>
@@ -217,7 +217,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
-              <h4>國立勤益科技大學 應用英語系 助理教授</h4>
+              <h4>國立勤益科技大學應用英語系 | 助理教授</h4>
               <h5>2022 - Present</h5>
               <p><em>Assistant Professor, Department of Applied English, National Chin-Yi University of Technology, Taichung, Taiwan.</em></p>
               <ul>
@@ -226,7 +226,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>國立高雄科技大學 外語教育中心 助理教授</h4>
+              <h4>國立高雄科技大學外語教育中心 | 助理教授</h4>
               <h5>2019 - 2021</h5>
               <p><em>Assistant Professor, Foreign Language Enducation Center, National Kaohsiung University of Technology, Kaohsiung, Taiwan.</em></p>
               <ul>
@@ -235,7 +235,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>國立新竹教育大學 英語教學系 講師</h4>
+              <h4>國立新竹教育大學英語教學系 | 講師</h4>
               <h5>2011 - 2013</h5>
               <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
               <ul>
@@ -249,7 +249,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>國立彰化師範大學 科學教育研究所 博士後研究員</h4>
+              <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
               <h5>2022 - 2022</h5>
               <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
               <ul>
@@ -258,7 +258,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>國立清華大學 區域創新中心 博士後研究員</h4>
+              <h4>國立清華大學區域創新中心 | 博士後研究員</h4>
               <h5>2021 - 2021</h5>
               <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
               <ul>
@@ -268,7 +268,7 @@
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>國立中山大學 社會實踐與發展研究中心 博士後研究員</h4>
+              <h4>國立中山大學社會實踐與發展研究中心 | 博士後研究員</h4>
               <h5>2018 - 2020</h5>
               <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
               <ul>
@@ -290,7 +290,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>專業指導 Guides</h2>
+        <h2>指導 Guides</h2>
         <p>(TBD) Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
@@ -300,7 +300,7 @@
 
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
+            <li data-filter=".filter-dog">Dog</li>
             <li data-filter=".filter-product">Product</li>
             <li data-filter=".filter-branding">Branding</li>
             <li data-filter=".filter-books">Books</li>
@@ -310,13 +310,13 @@
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/dog-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
+                  <h4>Dog 1</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-1.jpg" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/dog-1.jpg" title="Dog 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -358,13 +358,13 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/dog-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 2</h4>
+                  <h4>Dog 2</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/dog-2.jpg" title="Dog 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -406,13 +406,13 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/dog-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 3</h4>
+                  <h4>Dog 3</h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
-                  <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/dog-3.jpg" title="Dog 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
