Fix bugs for current content

--- a/academic-details.html
+++ b/academic-details.html
@@ -91,7 +91,7 @@
             <h3>學術研究 Research</h3>
             <hr>
             <h5>
-              研究計畫 (Research Project)
+              研究計畫 Research Projects
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>(TBD) Aut eum totam accusantium voluptatem.</span></li>
@@ -100,7 +100,7 @@
             </ul>
 
             <h5>
-              產學合作計畫 (Industry Cooperation Project)
+              產學合作計畫 Industry-university Cooperation Projects
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>(TBD) Aut eum totam accusantium voluptatem.</span></li>
@@ -109,7 +109,7 @@
             </ul>
 
             <h5>
-              期刊論文 (Journal Articles)
+              期刊論文 Journal Articles
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>楊真宜（2017）。〈新南向政策與東南亞語文人才培育〉《台灣國際研究季刊》第13卷 4期，頁143-174。</span></li>
@@ -117,14 +117,14 @@
             </ul>
             
             <h5>
-              專書篇章 (Book Chapters)
+              專書篇章 Book Chapters
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>Rau, D. Victoria, Hui-Huan Ann Chang, Yin-Sheng Tai, Chen-Yi Yang, Yi-Hui Lin, Chia-Chi Yang & Maa-Neu Dong. (2008) Teaching and learning an endangered language in Taiwan, In Documenting and Revitalizing Austronesian Language. Eds. By D. Victoria Rau & Margaret Florey, special volume for Language Documentation and Conservation, University of Hawai'i. 162-188.</span></li>
             </ul>
                         
             <h5>
-              研討會論文 (Conference Papers)
+              研討會論文 Conference Papers
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>楊真宜（2022）。客家年輕世代的語言活力與傳承。第十四屆台灣語言及其教學暨台灣學「蛻變的聲音」國際學術研討會，國立成功大學。</span></li>
@@ -150,7 +150,7 @@
             </ul>
 
             <h5>
-              專題演講 (Invited Talks)
+              專題演講 Invited Talks
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>A Sociolinguistic Description of Language Change in Taiwan. Department of English Language, Literature and Linguistics. Providence University, Taichung, Taiwan. May 12, 2020.</span></li>
@@ -159,7 +159,7 @@
             </ul>
 
             <h5>
-              電子報 (E-books)
+              電子報 Electronic News Reporting
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>楊真宜（2021）。〈一份傳承百年的犁頭山水話〉。《新作坊》電子報Vol.96，科技部。(https://www.hisp.ntu.edu.tw/report_paper?id=407)</span></li>
@@ -167,7 +167,7 @@
             </ul>
 
             <h5>
-              技術報告及其它 (Technical Report & Others)
+              技術報告及其它 Technical Report & Others
             </h5>
             <ul>
               <li><i class="bi bi-check-circle"></i> <span>楊真宜 (2018)。〈面臨傳承危機之國家語言〉。文化部國家語言發展法計畫研擬期中報告，國立台中教育大學委託撰寫。</span></li>
