--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <li><a href="#contact"><i class="bi bi-envelope navicon"></i> Contact</a></li>
       </ul>
     </nav>
-
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=9urna2e6ypgtlf1ypah5sh2n81g67u41" border="0" width="120">
   </header>
 
   <main class="main">
@@ -151,7 +152,7 @@
               <h4>國立清華大學語言學研究所博士</h4>
               <h6>Ph.D., Linguistics</h6>
               <p><em>National Tsing Hua University, Hsinchu City, Taiwan.</em></p>
-              <p>Dissertation: A Study of Taiwan Junior High Students’ Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
+              <p>Dissertation: A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
               <p>(TBD)</p>
             </div><!-- Edn Resume Item -->
 
