--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Profile: Chen-Yi Yang</title>
+  <title>楊真宜 Chen-Yi Yang (Karen)</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
