Add work experiences

--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
     </div>
 
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
-      <!-- Uncomment the line below if you also wish to use an image logo -->
-      <!-- <img src="assets/img/logo.png" alt=""> -->
       <h1 class="sitename">Chen-Yi Yang</h1>
     </a>
 
@@ -154,14 +152,14 @@
               <p><em>National Tsing Hua University, Hsinchu City, Taiwan.</em></p>
               <p>Dissertation: A Study of Taiwan Junior High Students' Language Proficiency, Use, and Attitude: Mandarin Chinese, Indigenous Languages, and English.</p>
               <p>(TBD)</p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
               <h4>靜宜大學英國語文學系碩士</h4>
               <h6>MA, English Language, Literature and Linguistics</h6>
               <p><em>Providence University, Taichung City, Taiwan.</em></p>
-              <p>(TBD) Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div><!-- Edn Resume Item -->
+              <p>Sociolinguistic Variation of Mandarin Chinese /f/ and /hw/ in Taiwan.</p>
+            </div>
 
             <h3 class="resume-title">Oversea</h3>
 
@@ -175,21 +173,29 @@
                 <li>A Survey of Junior High Students’ Language Proficiency, Use and Attitude in Taiwan: Mandarin Chinese, Indigenous Languages and English.</li>
                 <li>(TBD)</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <h3 class="resume-title">Academic Expertise</h3>
             <div class="resume-item pb-0">
               <h4>語言學</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>語意學</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>語用學</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>語言政策</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+              <h4>田野調查</h4>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
               <h4>英語教學</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
               <h4>社會語言學</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
               <h4>應用語言學</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
               <h4>地方創生與社會實踐</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
-            </div><!-- Edn Resume Item -->
+              <p><em>（社區營造、跨領域整合與應用）</em></p>
+            </div>
 
             <h3 class="resume-title">Academic Awards</h3>
             <div class="resume-item pb-0">
@@ -203,15 +209,15 @@
               <p><em>（Award of Annual MA thesis, Providence University, 2008）</em></p>
               <h4>國際榮譽大使</h4>
               <p><em>（International Honor Ambassador, Office of International Affairs, Providence University）</em></p>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <h3 class="resume-title">Licenses & Certificates</h3>
             <div class="resume-item pb-0">
               <h4>中等學校英文科教師證書</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
               <h4>教育部閩南語語言能力認證(中高級)</h4>
-              <p><em>(TBD) Innovative and deadline-driven Graphic Designer with 3+ years of experience</em></p>
-            </div><!-- Edn Resume Item -->
+              <p><em>(TBD) Innovative with 3+ years of experience</em></p>
+            </div>
 
           </div>
 
@@ -224,19 +230,49 @@
               <ul>
                 <li>(TBD) Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
+
+            <div class="resume-item">
+              <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
+              <h5>2022 - 2022</h5>
+              <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
+              <ul>
+                <li>(TBD) Managed up to 5 projects or tasks at a given time while under pressure</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>國立清華大學區域創新中心 | 博士後研究員</h4>
+              <h5>2021 - 2021</h5>
+              <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
+              <ul>
+                <li>科技部人文創新與社會實踐計畫</li>
+                <li>(TBD) Recommended and consulted with clients on the most appropriate graphic design</li>
+              </ul>
+            </div>
 
             <div class="resume-item">
               <h4>國立高雄科技大學外語教育中心 | 助理教授</h4>
               <h5>2019 - 2021</h5>
               <p><em>Assistant Professor, Foreign Language Enducation Center, National Kaohsiung University of Technology, Kaohsiung, Taiwan.</em></p>
               <ul>
+                <li>授課課程：大學部英文</li>
                 <li>(TBD) Managed up to 5 projects or tasks at a given time while under pressure</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
-              <h4>國立新竹教育大學英語教學系 | 講師</h4>
+              <h4>國立中山大學社會實踐與發展研究中心 | 博士後研究員</h4>
+              <h5>2018 - 2020</h5>
+              <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
+              <ul>
+                <li>科技部人文創新與社會實踐計畫</li>
+                <li>(TBD) Created 4+ design presentations and proposals a month for clients and account managers</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>國立新竹教育大學英語教學系 | 兼任講師</h4>
               <h5>2011 - 2013</h5>
               <p><em>Lecturer, Department of English Instruction, National Hsinchu University of Education, Hsinchu, Taiwan.</em></p>
               <ul>
@@ -247,41 +283,26 @@
                 <li>Listening and Speaking in English</li>
                 <li>(TBD)</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
-              <h4>國立彰化師範大學科學教育研究所 | 博士後研究員</h4>
-              <h5>2022 - 2022</h5>
-              <p><em>Postdoctoral Researcher, Graduate Institute of Science Education, National Changhua University of Education, Changhua, Taiwan.</em></p>
+              <h4>新竹市愉躍文理補習班 | 國中部英語教師</h4>
+              <h5>2009 - 2012</h5>
               <ul>
-                <li>(TBD) Managed up to 5 projects or tasks at a given time while under pressure</li>
+                <li>(TBD)</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
             <div class="resume-item">
-              <h4>國立清華大學區域創新中心 | 博士後研究員</h4>
-              <h5>2021 - 2021</h5>
-              <p><em>Postdoctoral Researcher, Regional Innovation Center, National Tsing Hua University, Hsinchu, Taiwan.</em></p>
+              <h4>台中縣梧棲國中(日夜間部) | 英語科教師</h4>
+              <h5>2008 - 2009</h5>
               <ul>
-                <li>科技部人文創新與社會實踐計畫</li>
-                <li>(TBD) Recommended and consulted with clients on the most appropriate graphic design</li>
+                <li>(TBD)</li>
               </ul>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>國立中山大學社會實踐與發展研究中心 | 博士後研究員</h4>
-              <h5>2018 - 2020</h5>
-              <p><em>Postdoctoral Researcher, Social Engagement Center, National Sun Yat-sen University, Kaohsiung, Taiwan.</em></p>
-              <ul>
-                <li>科技部人文創新與社會實踐計畫</li>
-                <li>(TBD) Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
+            </div>
 
           </div>
-
         </div>
-
       </div>
 
     </section><!-- /Resume Section -->
@@ -321,7 +342,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -333,7 +354,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
@@ -345,7 +366,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
@@ -357,7 +378,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
               <div class="portfolio-content h-100">
@@ -369,7 +390,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -381,7 +402,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
@@ -393,7 +414,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
@@ -405,7 +426,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-dog">
               <div class="portfolio-content h-100">
@@ -417,7 +438,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
@@ -429,7 +450,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
@@ -441,7 +462,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
@@ -453,7 +474,7 @@
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
-            </div><!-- End Portfolio Item -->
+            </div>
 
           </div><!-- End Portfolio Container -->
 
